--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
           <p>I look forward to showcasing my impressive skills to assist you in 
             realising your big goals.
           </p>
-        <a href="./docs/Redeemer Gbewordoh - CV.pdf" class="cta">Download Resume</a>
+        <a href="./docs/Curriculum Vitae - Redeemer Gbewordoh.pdf" class="cta">Download Resume</a>
+        <a href="./docs/Cover Letter- Redeemer Gbewordoh.pdf" class="cta">Download Cover Letter</a>
       </div>
     </div>
   </section>
